--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "open-house-qr-checkin",
+  "name": "qrcode-project",
   "private": true,
-  "version": "2.0.0",
   "type": "module",
-  "engines": {
-    "node": ">=18"
-  },
+  "engines": { "node": ">=18" },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.4"
+    "@supabase/supabase-js": "^2.45.0",
+    "csv-stringify": "^6.5.0",
+    "uuid": "^9.0.1"
+  },
+  "scripts": {
+    "dev": "vercel dev",
+    "start": "node",
+    "lint": "echo \"no lint\""
   }
 }
